objects/JS_TS_Details__c/JS_TS_Details__c.object-meta.xml
<CustomObject>
    <label>Old Job TS Entry</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>TS Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old Job TS Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>