objects/JS_TS_Details__c/fields/End_Watch__c.field-meta.xml
<CustomField>
    <fullName>End_Watch__c</fullName>
    <label>End Watch</label>
    <type>DateTime</type>
</CustomField>