objects/JS_TS_Details__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <formula>Job_Timesheet__r.GL_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code</label>
    <type>Text</type>
</CustomField>