objects/JS_TS_Details__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <formula>Job_Timesheet__r.Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>