objects/JS_TS_Details__c/fields/Job_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Job_Timesheet__c</fullName>
    <label>Job Timesheet</label>
    <referenceTo>JS_Time_Sheet__c</referenceTo>
    <relationshipName>Job_TS_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>