objects/JS_TS_Details__c/fields/Start_Watch__c.field-meta.xml
<CustomField>
    <fullName>Start_Watch__c</fullName>
    <label>Start Watch</label>
    <type>DateTime</type>
</CustomField>