objects/JS_TS_Details__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>Job_Task__c</referenceTo>
    <relationshipName>JS_TS_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>